--- a/style.css
+++ b/style.css
@@ -49,6 +49,29 @@ form {
     grid-template-rows: auto auto;
 }
 
+@media screen and  (max-width: 550px) {
+    .container {
+        height: auto;
+        width: 80vw;
+        margin: 2rem 0 0 2rem;
+        padding: 1rem;
+    }
+
+    .user-form {
+        width: 100%;
+        height: 100%;
+        background-color: transparent;
+        margin-top: 2rem;
+    }
+    
+    form {
+        display: grid;
+        /* grid-template-columns: 40% 60%; */
+        gap: 2rem;
+        grid-template-rows: auto auto;
+    }
+}
+
 /* .form_alert {
     width: 20rem;
     color: white;
@@ -107,6 +130,29 @@ select {
    display: none;
 }
 
+@media screen and  (max-width: 550px) {
+    select {
+        -webkit-appearance: none;
+        border: none;
+        outline: none;
+        cursor: pointer;
+        margin: 5px;
+        font-weight: bold;
+        background-color: #c0435abb;
+        color: white;
+        width: 12.5rem;
+        border-radius: 5px;
+        padding: 0.5rem;
+        text-align: center;
+    }
+
+    .category-toggle {
+        grid-column-start: 1;
+        display: none;
+    }
+}
+
+
 .from-date, .to-date {
     display: flex;
     flex-direction: column;
@@ -138,15 +184,28 @@ select {
 }
 
 .submit-btn {
+    display: none;
+    width: 8rem;
+    /* margin-left: 1.5rem; */
     background-color: #c0435a67;
     color: white;
-    margin: 5px;
-    width: 10rem;
     padding: 0.6rem;
     font-size: 15px;
-    border-radius: 3px;
     border: none;
-    outline: none;
+    /* margin-right: 5px; */
+    border-radius: 5px;
+}
+
+.form_alert {
+    width: 25rem;
+    margin: 0 auto;
+}
+
+@media screen and  (max-width: 550px) {
+    .form_alert {
+        width: 25rem;
+        margin: 0 auto;
+    }
 }
 
 
