--- a/style.css
+++ b/style.css
@@ -21,11 +21,6 @@ html, body {
     position: relative;
 }
 
-.logo {
-    position: fixed;
-    width: 100%;
-    margin: 0.5rem 0 1rem 0.5rem;
-}
 
 .container {
     height: auto;
@@ -34,6 +29,57 @@ html, body {
     padding: 1rem;
 }
 
+h1 {
+    position: relative;
+    font-family: 'Exo';
+    font-size: 3em;
+    margin: 0;
+    transform: skew(-15deg);
+    letter-spacing: 0.02em;
+}
+
+@media screen and (max-width: 768px) {
+    h1 {
+        position: relative;
+        font-family: 'Exo';
+        text-align: center;
+        font-size: 3em;
+        margin: 0;
+        transform: skew(-15deg);
+        letter-spacing: 0.02em;
+    }
+}
+    
+    h1::after {
+      content: '';
+      position: absolute;
+      top: -0.1em;
+      right: 0.05em;
+      width: 0.4em;
+      height: 0.4em;
+      background: 
+        radial-gradient(white 3%, rgba(white, 0.3) 15%, rgba(white, 0.05) 60%, transparent 80%),
+        radial-gradient(rgba(white, 0.2) 50%, transparent 60%) 50% 50% / 5% 100%,
+        radial-gradient(rgba(white, 0.2) 50%, transparent 60%) 50% 50% / 70% 5%;
+      background-repeat: no-repeat;
+    }
+    
+    h1 span:first-child {
+      display: block;
+      text-shadow: 0 0 0.1em #8ba2d0, 0 0 0.2em black,  0 0 5em #165ff3;
+      -webkit-text-stroke: 0.06em rgba(black, 0.5);
+    }
+    
+    h1 span:last-child {
+      position: absolute;
+      left: 0;
+      top: 0;
+      background-image: linear-gradient(#fff 25%, #fff 35%, #fff 50%, #fff 50%, #fff 55%, #fff 75%);
+      -webkit-text-stroke: 0.01em #94a0b9;
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+
 
 .user-form {
     width: 100%;
@@ -41,6 +87,19 @@ html, body {
     background-color: transparent;
     margin-top: 2rem;
 }
+
+/* .logo {
+    position: fixed;
+    width: 100%;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.logo .logo-img {
+    width: 10rem;
+    height: 5rem;
+} */
+
 
 form {
     display: grid;
@@ -52,8 +111,8 @@ form {
 @media screen and  (max-width: 550px) {
     .container {
         height: auto;
-        width: 80vw;
-        margin: 2rem 0 0 2rem;
+        width: 100vw;
+        margin: 2rem 0 0 1rem;
         padding: 1rem;
     }
 
@@ -186,7 +245,7 @@ select {
 .submit-btn {
     display: none;
     width: 8rem;
-    /* margin-left: 1.5rem; */
+    /* margin: 1rem 2rem 0 2rem; */
     background-color: #c0435a67;
     color: white;
     padding: 0.6rem;
@@ -203,8 +262,9 @@ select {
 
 @media screen and  (max-width: 550px) {
     .form_alert {
-        width: 25rem;
-        margin: 0 auto;
+        width: 20rem;
+        margin-right: 1rem;
+        transition-timing-function: ease-out;
     }
 }
 
