--- a/style.css
+++ b/style.css
@@ -285,6 +285,19 @@ select {
         grid-column-start: 2;
     }
 
+    input {
+        background: rgba(223, 218, 218, 0.479);
+        color: white;
+        outline: none;
+        border: none;
+        border-radius: 5px;
+        margin: 3px;
+        padding: 0.5rem;
+        font-size: 1rem;
+        font-weight: 500;
+        cursor: pointer;
+    }
+
     .category-toggle {
         grid-column-start: 2;
         display: none;
