--- a/style.css
+++ b/style.css
@@ -229,6 +229,24 @@ select {
         grid-template-rows: auto auto;
     }
 
+    input {
+        background: rgba(223, 218, 218, 0.479);
+        color: white;
+        outline: none;
+        border: none;
+        border-radius: 5px;
+        margin: 5px;
+        padding: 0.5rem;
+        font-size: 1rem;
+        font-weight: 500;
+        cursor: pointer;
+    }
+    
+    input::placeholder {
+        color: rgba(224, 221, 221, 0.7);
+        font-weight:500;
+    }
+
     select {
         -webkit-appearance: none;
         border: none;
@@ -309,6 +327,24 @@ select {
         margin: 2rem 0 0 3rem;
     }
 
+    input {
+        background: rgba(223, 218, 218, 0.479);
+        color: white;
+        outline: none;
+        border: none;
+        border-radius: 5px;
+        margin: 5px;
+        padding: 0.5rem;
+        font-size: 0.8rem;
+        font-weight: 500;
+        cursor: pointer;
+    }
+    
+    input::placeholder {
+        color: rgba(224, 221, 221, 0.7);
+        font-weight:500;
+    }
+
     select {
         -webkit-appearance: none;
         border: none;
@@ -318,7 +354,7 @@ select {
         font-weight: bold;
         background-color: #c0435abb;
         color: white;
-        width: 12.5rem;
+        width: 10rem;
         border-radius: 5px;
         padding: 0.5rem;
         text-align: center;
@@ -327,6 +363,12 @@ select {
     .category-toggle {
         grid-column-start: 1;
         display: none;
+    }
+
+    .from-date, .to-date {
+        display: flex;
+        flex-direction: column;
+        width: 11.7em;
     }
 
     .form_alert {
